# crew-pay

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
docs/: ARCHITECTURE.md  USAGE.md  database-erd.dbml  database-schema.md
examples/: example_claim.json  example_pay_record.json  usage_example.py
neo4j/: schema.cypher  seed.cypher
prisma/: schema.prisma  seed.ts
scripts/: load-neo4j.ts  test-database.ts
src/crew_pay/: __init__.py  cli.py
src/crew_pay/agents/: __init__.py  base_agent.py  claims_processing_agent.py  compliance_agent.py  notification_agent.py  pay_validation_agent.py
src/crew_pay/config/: __init__.py  settings.py
src/crew_pay/models/: __init__.py  schemas.py  state.py
src/crew_pay/orchestrator/: __init__.py  workflow.py
src/crew_pay/utils/: __init__.py  exceptions.py  helpers.py  logging.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_config.py  test_helpers.py  test_models.py
